--- a/trangcon/laptophoctap.html
+++ b/trangcon/laptophoctap.html
@@ -100,7 +100,8 @@
                             </li>
                             <br>
                             <li class="category-item">
-                                <a href="#" class="link-item"><i class="fas fa-laptop-code heading-icon"></i> Laptop học
+                                <a href="trangcon/laptophoctap.html" class="link-item"><i
+                                        class="fas fa-laptop-code heading-icon"></i> Laptop học
                                     tập & làm
                                     việc</a>
                             </li>
