--- a/trangcon/phukienlaptop.html
+++ b/trangcon/phukienlaptop.html
@@ -107,7 +107,8 @@
                             </li>
                             <br>
                             <li class="category-item">
-                                <a href="#" class="link-item"><i class="fas fa-cogs"></i> Phụ kiện laptop</a>
+                                <a href="/trangcon/phukienlaptop.html" class="link-item"><i class="fas fa-cogs"></i> Phụ
+                                    kiện laptop</a>
                             </li>
 
                         </ul>
