--- a/trangcon/phukienlaptop.html
+++ b/trangcon/phukienlaptop.html
@@ -100,14 +100,15 @@
                             </li>
                             <br>
                             <li class="category-item">
-                                <a href="/trangcon/laptophoctap.html" class="link-item"><i
+                                <a href="../trangcon/laptophoctap.html" class="link-item"><i
                                         class="fas fa-laptop-code heading-icon"></i> Laptop học
                                     tập & làm
                                     việc</a>
                             </li>
                             <br>
                             <li class="category-item">
-                                <a href="/trangcon/phukienlaptop.html" class="link-item"><i class="fas fa-cogs"></i> Phụ
+                                <a href="../trangcon/phukienlaptop.html" class="link-item"><i class="fas fa-cogs"></i>
+                                    Phụ
                                     kiện laptop</a>
                             </li>
 
