--- a/trangcon/phukienlaptop.html
+++ b/trangcon/phukienlaptop.html
@@ -33,11 +33,11 @@
                 </div>
             </div>
             <div class="nav_form">
-                <a class="form" href="/trangcon/form.html">
+                <a class="form" href="../trangcon/form.html">
                     <img src="../img/ak1.webp" width=" 24px" alt="">
                     <div class="name">Đăng ký</div>
                 </a>
-                <a class="form" href="/trangcon/login.html">
+                <a class="form" href="../trangcon/login.html">
                     <img src="../img/ak3.webp" width="24px" alt="">
                     <div class="name">Đăng nhập</div>
                 </a>
