--- a/trangcon/page.html
+++ b/trangcon/page.html
@@ -33,11 +33,11 @@
                 </div>
             </div>
             <div class="nav_form">
-                <a class="form" href="/trangcon/form.html">
+                <a class="form" href="../trangcon/form.html">
                     <img src="../img/ak1.webp" width=" 24px" alt="">
                     <div class="name">Đăng ký</div>
                 </a>
-                <a class="form" href="/trangcon/login.html">
+                <a class="form" href="../trangcon/login.html">
                     <img src="../img/ak3.webp" width="24px" alt="">
                     <div class="name">Đăng nhập</div>
                 </a>
@@ -99,13 +99,13 @@
                             </li>
                             <br>
                             <li class="category-item">
-                                <a href="/trangcon/laptophoctap.html" class="link-item"><i class="fas fa-laptop-code heading-icon"></i> Laptop học
+                                <a href="../trangcon/laptophoctap.html" class="link-item"><i class="fas fa-laptop-code heading-icon"></i> Laptop học
                                     tập & làm
                                     việc</a>
                             </li>
                             <br>
                             <li class="category-item">
-                                <a href="/trangcon/phukienlaptop.html" class="link-item"><i class="fas fa-cogs"></i> Phụ kiện laptop</a>
+                                <a href="../trangcon/phukienlaptop.html" class="link-item"><i class="fas fa-cogs"></i> Phụ kiện laptop</a>
                             </li>
 
                         </ul>
