--- a/trangcon/form.html
+++ b/trangcon/form.html
@@ -21,7 +21,7 @@
         <div class="nav">
             <!-- logo ảnh  -->
             <div class="nav_left">
-                <a href="/index.html">
+                <a href="../index.html">
                     <img src="../img/Logogear3.png" alt="">
                 </a>
             </div>
