--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script src="https://uhchat.net/code.php?f=e7037a"></script>
     <!-- HEADER  -->
     <div class="header">
         <!-- navigation -->
@@ -104,7 +105,8 @@
                             </li>
                             <br>
                             <li class="category-item">
-                                <a href="./trangcon/phukienlaptop.html" class="link-item"><i class="fas fa-cogs"></i> Phụ
+                                <a href="./trangcon/phukienlaptop.html" class="link-item"><i class="fas fa-cogs"></i>
+                                    Phụ
                                     kiện laptop</a>
                             </li>
 
@@ -937,6 +939,14 @@
             </p>
         </div>
     </footer>
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+
 </body>
 
 </html>
